--- a/locale/messages.json
+++ b/locale/messages.json
@@ -1,7 +1,3 @@
-{"modal / hed":"Embed into your website",
-"modal \/ close":"Close modal",
-"modal \/ text":"Just copy &amp; paste the following code into your website.",
-"modal \/ width":"Width",
-"modal \/ height":"Height",
-"publish \/ button \/ banner":"NEW",
-"publish \/ button-label":"Embed chart"}
+{
+  "Embed this chart": "Embed this chart"
+}
