Made all strings translatable

--- a/locale/da_DK.json
+++ b/locale/da_DK.json
@@ -1,3 +1,11 @@
 {
-  "Embed this chart": "Indlejr denne graf"
+    "Embed this chart": "Indlejr dette diagram",
+    "Embed chart": "Indlejr diagram",
+    "Generating embed code, please stand by...": "Opretter indlejringskode, vent venligst…",
+    "Unable to publish diagram. Please try again.": "Kan ikke udgive diagrammet. Prøv venligst igen.",
+    "Copy the embed code you need:": "Kopiér den indlejringskode, som du har brug for:",
+    "Textile": "Textile",
+    "HTML": "HTML",
+    "URL": "URL",
+    "OK": "OK"
 }
